# LiveBench

./: .gitignore  LICENSE  README-es_CO.md  README.md  changelog.md  pyproject.toml
docs/: AUTHOR_RESPONSIBILITY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASHEET.md  MAINTENANCE_PLAN.md
livebench/: .env.example  __init__.py  common.py  conversation.py  download_leaderboard.py  download_questions.py  gen_api_answer.py  gen_ground_truth_judgment.py  gen_model_answer.py  run_livebench.py  run_livebench_new.py  show_livebench_result.py  show_livebench_results.py  task_messages.py
livebench/agentic_code_runner/eval/: README.md  config.json
livebench/agentic_code_runner/eval/harness/: __init__.py  build_dataset.py  constant.py  dataset.py  gen_report.py  image.py  instance.py  pull_request.py  report.py  run_evaluation.py  test_result.py
livebench/agentic_code_runner/eval/utils/: args_util.py  docker_util.py  fs_utils.py  git_util.py  logger.py
livebench/agentic_code_runner/minisweagent/: __init__.py  run_inference.py
livebench/agentic_code_runner/minisweagent/agents/: __init__.py  default.py  interactive.py  replay.py
livebench/agentic_code_runner/minisweagent/config/: __init__.py  default.yaml  livebench.yaml  livebench_native.yaml
livebench/agentic_code_runner/minisweagent/environments/: __init__.py  docker.py  local.py
livebench/agentic_code_runner/minisweagent/models/: README.md  __init__.py  litellm_model.py  test_models.py
livebench/agentic_code_runner/sweagent/: README.md  run_inference.py
livebench/agentic_code_runner/sweagent/agent/: types.py  (+3 more)
livebench/bcb_runner/eval/: __init__.py  utils.py
livebench/code_runner/: requirements_eval.txt
livebench/code_runner/eval/: README.md  __init__.py  utils.py
livebench/if_runner/: README.md  live_data.py  utils.py
livebench/if_runner/ifbench/: README.md  evaluation_lib.py  instructions.py  instructions_registry.py  instructions_util.py
livebench/if_runner/instruction_following_eval/: evaluation_main.py  instructions.py  instructions_registry.py  json_formatter.py  run.sh
livebench/lcb_runner/: lm_styles.py
livebench/lcb_runner/evaluation/: __init__.py  compute_code_generation_metrics.py  testing_util.py
livebench/lcb_runner/utils/: extraction_utils.py
livebench/model/: __init__.py  api_model_config.py  api_models.py  completions.py  model_adapter.py  model_registry.py  models.py
livebench/model/model_configs/: amazon.yml  anthropic.yml  arcee.yml  cohere.yml  deepseek.yml  google.yml  meta.yml  microsoft.yml  minimax.yml  mistral.yml  moonshotai.yml  nvidia.yml  openai.yml  openrouter.yml  perplexity.yml  qwen.yml  stepfun.yml  tencent.yml  think_recovery.yml  tinker.yml  xai.yml  xiaomi.yml  zai.yml  zft.yml
livebench/process_results/: __init__.py  util.py
livebench/process_results/coding/: utils.py
livebench/process_results/instruction_following/: utils.py
livebench/scripts/: answer_csv_to_jsonl.py  apply_edits_to_bcb_completion.py  apply_edits_to_code_completion.py  calc_attribute_stats.py  calc_token_offset.py  check_coding_questions.py  check_grading_flakiness.py  check_question_difficulties.py  check_question_variance.py  code_question_to_csv.py  compare_score_tables.py  cost_utils.py  driver.sh  edit_questions.py  error_check  error_check.py  fail_missing_questions.py  find_differential_question.py  find_hardest_question.py  find_max_attribute.py  find_max_timestamp.py  gen_livebench_answers.sh  inspect_agentic_traj.py  inspect_model_answers.py  progress.py  question_to_csv.py  rename_model.py  replay_agent_trajectory.py  rerun_failed_questions.py  rerun_many.py  rescue_agentic_submission.py  run_livebench  run_livebench_parallel  run_livebench_parallel_models  run_livebench_sequential  run_livebench_sequential_local_model  smoke_test.py  spend_report.py  syntax_error_finder.py  test_prompts.py  (+1 more)
livebench/types/: __init__.py  question.py
tests/: test_minimax_provider.py
(+411 files in other folders)
